--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,5 @@ edition = "2018"
 name = "rust_os"
 version = "0.1.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
+bootloader = "0.9.8"
